# JDG_Quiz

./: .gitignore  LICENSE  README.md  pyproject.toml
my_project/: Dockerfile.django  Dockerfile.fastapi  docker-compose.yml
my_project/django_app/config/: settings.py  urls.py
my_project/django_app/quiz/: apps.py  urls.py
my_project/django_app/quiz/docs/: question_docs.py  quiz_docs.py
my_project/django_app/quiz/migrations/: 0001_initial.py
my_project/django_app/quiz/models/: __init__.py  choice.py  question.py  quiz.py
my_project/django_app/quiz/repositories/: choice_repository.py  question_repository.py  quiz_repository.py
my_project/django_app/quiz/serializers/: choice_serializer.py  question_serializer.py  quiz_serializer.py
my_project/django_app/quiz/services/: choice_service.py  question_service.py  quiz_service.py
my_project/django_app/quiz/views/: question_view.py  quiz_view.py
my_project/django_app/submission/: apps.py  urls.py
my_project/django_app/submission/docs/: submission_docs.py
my_project/django_app/submission/migrations/: 0001_initial.py
my_project/django_app/submission/models/: __init__.py  (+2 more)
my_project/django_app/user/: admin.py  apps.py
my_project/fastapi_app/: main.py
my_project/fastapi_app/controllers/: quiz_controller.py  quiz_dependency.py
my_project/fastapi_app/docs/: common_docs.py  error_docs.py  openapi_utils.py
my_project/fastapi_app/schemas/: choice_schema.py  question_schema.py  quiz_schema.py  submission_schema.py
my_project/fastapi_app/services/: quiz_read_service.py
my_project/nginx/: nginx.conf
(+19 files in other folders)
